--- a/Test/Test.UWP/Test.UWP.csproj
+++ b/Test/Test.UWP/Test.UWP.csproj
@@ -108,6 +108,7 @@
     <None Include="Test.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="left-arrow.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
